--- a/OpenAlex_Schares.ipynb
+++ b/OpenAlex_Schares.ipynb
@@ -44,7 +44,7 @@
     "filter_by_paratext = 'is_paratext:false'                                  # is not part of the front matter - cover, ToC, issue information, etc\n",
     "filter_by_type = 'type:journal-article'   \n",
     "filter_by_publication_date = 'from_publication_date:2022-01-01'\n",
-    "my_email = 'mailto=eschares@iastate.edu'    #change to your own email, including this puts you in OpenAlex's \"polite pool\" to get faster responses, https://docs.openalex.org/api#the-polite-pool"
+    "my_email = 'mailto=you@email.com'    #change to your own email, including this puts you in OpenAlex's \"polite pool\" to get faster responses, https://docs.openalex.org/api#the-polite-pool"
    ]
   },
   {
